<resources>
    <string name="app_name">toVisit_anmol_c0777245_android</string>
    <string name="action_clear">Clear Map</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hospitals">Nearby Hospitals</string>
    <string name="Restaurants">Restaurants</string>
    <string name="nearby_restaurants">Food</string>
    <string name="nearby_cafes">Cafes</string>
    <string name="nearby_museums">Museums</string>
    <string name="default_map">Default Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="liquor_store">Liquor</string>
    <string name="favorite_places_list">Favorite Places List</string>
    <string name="title_activity_maps">Map</string>
</resources>