<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/hospitals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_hospitals" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_restaurants" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/cafes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_cafes" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/museums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearby_museums" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <!--    <androidx.viewpager.widget.ViewPager-->
    <!--        android:id="@+id/view_pager"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_directions" />

    <RadioGroup
        android:id="@+id/maps_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin">

        <RadioButton
            android:id="@+id/default_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/default_map" />

        <RadioButton
            android:id="@+id/hybrid_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hybrid_map" />

        <RadioButton
            android:id="@+id/terrain_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terrain_map" />

        <RadioButton
            android:id="@+id/satellite_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/satellite_map" />
    </RadioGroup>


</androidx.coordinatorlayout.widget.CoordinatorLayout>